Fix title center align v

--- a/style/main.css
+++ b/style/main.css
@@ -160,7 +160,7 @@ select.day {
 	font-size: 40px;
 	letter-spacing: 3px;
 	margin: 0;
-	padding: 15px;
+	padding: 10px 15px 15px;
 }
 
 
